--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,4 +1,4 @@
-FROM elasticsearch:latest
+FROM elasticsearch:alpine
 MAINTAINER Tobias L. Maier <tobias.maier@baucloud.com>
 
 RUN /usr/share/elasticsearch/bin/plugin install analysis-phonetic
