Fix plugin install command in Dockerfile

--- a/2.4-centerforopenscience/Dockerfile
+++ b/2.4-centerforopenscience/Dockerfile
@@ -1,4 +1,4 @@
 FROM centerforopenscience/elasticsearch:2.4
 LABEL maintainer="Tobias L. Maier <tobias.maier@baucloud.com>"
 
-RUN bin/elasticsearch-plugin install analysis-phonetic
+RUN bin/plugin install analysis-phonetic
