--- a/6.4.0/Dockerfile
+++ b/6.4.0/Dockerfile
@@ -1,4 +1,4 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:6.4.0
 MAINTAINER Tobias L. Maier <tobias.maier@baucloud.com>
 
-RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install --batch analysis-phonetic
+RUN elasticsearch-plugin install --batch analysis-phonetic
