--- a/6.5.4/Dockerfile
+++ b/6.5.4/Dockerfile
@@ -2,3 +2,10 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:6.5.4
 MAINTAINER Tobias L. Maier <tobias.maier@baucloud.com>
 
 RUN elasticsearch-plugin install --batch analysis-phonetic
+RUN true \
+  && mkdir -p config/analysis \
+  && curl -sSL --output "german-decompounder.zip" "https://github.com/uschindler/german-decompounder/archive/master.zip" \
+  && unzip "german-decompounder.zip" -x "german-decompounder-master/NOTICE.txt" "german-decompounder-master/README.md" \
+  && mv german-decompounder-master/* config/analysis/ \
+  && rmdir "german-decompounder-master" \
+  && rm -f "german-decompounder.zip"
